affine/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: affine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: affine
  template:
    metadata:
      labels:
        app: affine
    spec:
      containers:
        - name: affine
          image: ghcr.io/toeverything/affine:stable
          ports:
            - containerPort: 3010
          volumeMounts:
            - mountPath: /root/.affine/storage
              name: affine-storage
            - mountPath: /root/.affine/config
              name: affine-config
      volumes:
        - name: affine-storage
          persistentVolumeClaim:
            claimName: affine-storage-pvc
        - name: affine-config
          persistentVolumeClaim:
            claimName: affine-config-pvc
