affine/service.yml
apiVersion: v1
kind: Service
metadata:
  name: affine-service
spec:
  selector:
    app: affine
  ports:
    - protocol: TCP
      port: 3010
      targetPort: 3010
